[package]
name = "clamped_value"
version = "0.1.0"
edition = "2021"
description = "Provides a generic `ClampedValue` struct that stores a value and ensures that it is always within the specified minimum and maximum values."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
num-traits = "0.2.17"
